@@ -96,10 +96,10 @@ list2SnpSet <- function(x, returnParams=FALSE){
                           "SNP Quality Score",
                           "Center AA", "Center AB", "Center BB",
                           "Scale AA", "Scale AB", "Scale BB",
-                          "N AA", "N AB", "N BB",
-                          "Shift in parameters AA",
-                          "Shift in parameters AB",
-                          "Shift in parameters BB"),
+                          "N AA", "N AB", "N BB"),
+#                          "Shift in parameters AA",
+#                          "Shift in parameters AB",
+#                          "Shift in parameters BB"),
                         row.names=c(
                           "SNPQC",
                           "cAA", "cAB", "cBB",
