@@ -42,7 +42,7 @@ BioC data packages
 
 2009-03-25 Rob Scharpf - committed version 1.0.60
 * simplified some of the preliminary steps for the computeCopynumber function
-** crlmm output subset within the body of the function
+* crlmm output subset within the body of the function
 * modified vignette -- store results in an oligoSnpSet object (for now)
 * added function to extract the date from the celfile headers (celDates)
 
@@ -78,7 +78,6 @@ BioC data packages
 * added functions to read in idat files, pre-process and genotype 
 data from Illumina SNP arrays (functions named readIdatFiles() 
 and crlmmIllumina() in crlmm-illumina.R)
-
 * added man pages for these functions
 
 2009-04-01 Matt Ritchie - committed version 1.0.67
@@ -91,8 +90,18 @@ and crlmmIllumina() in crlmm-illumina.R)
 
 2009-04-03 B Carvalho - committed version 1.0.70
 
-** Updated TODO and DESCRIPTION
+* Updated TODO and DESCRIPTION
 
 2009-04-04 R.Scharpf - committed version 1.0.71
 
 *  bug in oneBatch function for chromosome X.  added additional checks for missing values
+
+2009-04-06 Matt Ritchie - committed version 1.0.72
+
+* new argument in readIdatFiles() 'saveDate', which saves the date and time each array
+is decoded and scanned
+* results from crlmmIllumina() now saved as 'SnpSet' just like crlmm()
+* reorganised Illumina preprocessing functions slightly to
+  - allow copy number intensities to be saved along with snp intensities
+  - make use of new indexing objects in the chip specific crlmm data packages
+  - fix a few bugs
